2004-02-02  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-cvs-b22

	* Updated copyright to 2000-2004.

2004-02-02  Don Willingham <donwillingham@users.sourceforge.net> 1.4.3-cvs-b21

	*  Allows admins to search comments by IP address, by adding IP to the
	   search string.

2004-02-02  Christian Mohn <ch-moh@online.no> 1.4.3-cvs-b20

        * Removed cmd.exe call in platform/fs_win32.php as PHP itself calls
          this when executing binaries in Win32. 
          This caused two cmd.exe processes running every time a binary 
          was called on that platform.
        
        * Added VBS as a valid executable extension in platform/fs_win32.php
          VBScript files are valid executables in Windows. :)

        * Changed the temp dir from using the system %temp% variable in
          fs_win32, to use the Gallery temp dir instead. You may not have
          allowed PHP access to %TEMP%. This could cause permissions related
          problems.


2004-02-01  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b19

	* Fixed a bug in save_photos caused by the new tabbed interface.  We
	  were not properly referencing the opener so the progress dialog was
	  not going away after adding photos.

2004-01-30  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b18

	* Fixed several issues in add_photos:
	  - Removed ob_start/ob_end buffering code; if includes are leaking
	    text we want to know about it and fix it.
	  - Got rid of a warning when add_photos_mode cookie isn't set
	  - Fixed warnings in save_photos.php when you submit an empty form
	  - Added window.focus() to add_photos.php so that it doesn't pop under
	  - Fixed Javascript to display progress dialog in upload forms so that
	    they refer to the proper object

2004-01-30 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b17
	
	* Change: Skin Update

2004-01-30 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b16

	* New: Added Jenskin. A Skin that looks likt the configwizard.

	* Change: Some cosmetic changes.
