@@ -1,0 +1,194 @@
+/* 
+   default text styles - background and colors overriden by
+   album 'bgcolor', 'background', and 'textcolor' properties.
+*/
+/*
+  $Id$
+ 
+  Gallery - a web based photo album viewer and editor
+  Copyright (C) 2000-2003 Bharat Mediratta
+ 
+  This program is free software; you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation; either version 2 of the License, or (at
+  your option) any later version.
+ 
+  This program is distributed in the hope that it will be useful, but
+  WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+  General Public License for more details.
+ 
+  You should have received a copy of the GNU General Public License
+  along with this program; if not, write to the Free Software
+  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+
+*/ 
+
+.sitedesc	{ background-color: #FCFCF3; margin-top:25px; padding:5px;
+		  border-style: solid; border-width: 1px ; border-color: #000000;
+		}
+
+.inner		{ padding: 5px; margin-top:20px;
+		  border-style: solid; border-color: #000000; border-width:1px;
+		}
+
+.shortdesc	{ background-color: #DCDCC0; padding:5px; font-weight: bold;
+		}
+
+body	{ 
+	  color:#00000;
+	  font-family: Verdana, Arial, Helvetica, sans-serif;
+	  background-image: url(../images/simplex-bkg.gif);
+	}
+
+a:link		{ color: #000099;
+		}
+
+a:hover { 
+		  text-decoration:none;
+		}
+
+/* 
+   text styles 
+*/
+.title                          /* album titles on main page */
+	{ 
+	  font-size: 14px; 
+	  font-weight: bold; 
+	}
+
+.mod_title			/* album title -- Text is controlled by .title */
+	{
+	  border:1px solid #000000;
+	  border-right-width:0px;
+	  border-bottom-width:0px;
+	  border-left-width:0px;
+	}
+
+.albumdesc  /*album description includes all text and background*/
+	{
+	color:#000000;
+	}
+
+.desc	{ background-color: #FCFCF3 ; padding:3px; margin:8px; font-size:1.0em;
+	  width:80%;
+	  border-style: solid; border-color: #000000; 
+	  border-width:1px; -Moz-Border-Radius: 20px;
+	}
+
+.caption                        /* photo captions on all pages */
+	{ 
+	  font-size: 10px; 
+	}
+.modcaption  /* modifies background for caption text to reside */
+	{
+	  font-size: 10px; 
+	}
+
+.error		{ background-color: #CC0000; color: #FFFFFF ;
+		  padding:2px
+		}
+
+.attention                          /* so far, just for voting instructions*/
+        {
+          font-family: Verdana, Arial, Helvetica, sans-serif;
+          font-weight: normal;
+          color: blue;
+          font-size: 12px;
+        }
+
+/*
+.warning        { font-weight:bold; background-color: #FFFF33; color: #000000 ;
+		  width: 150px; padding:2px; 
+		}
+*/
+
+.headbox { 
+	  background-color: #E6E6DC; font-size: 1.5em;  font-weight:boldi; padding:10px;
+	  border-style: solid; border-width: 1px; border-color: #F0F0F0;
+	}
+
+.head                           /* page headers */
+	{ 
+	  font-size: 16px; 
+	  font-weight: bold; 
+	}
+
+.bread                          /* used in breadcrumb bars */
+	{ 
+	  font-size: 10px; 
+	}
+.nav                            /* used in navigation bars */
+	{ 
+	  font-size: 12px; 
+	}
+.navtableborderbegin
+	{
+	  border:1px solid #000000;
+	}
+.navtableborderend
+	{
+	  border:1px solid #000000;
+	  border-top-width:0px;
+	}
+.bordertop
+	{
+	  border:1px solid #000000;
+	  border-right-width:0px;
+	  border-bottom-width:0px;
+	  border-left-width:0px;
+	}
+.borderright
+	{
+	  border:1px solid #000000;
+	  border-top-width:0px;
+	  border-bottom-width:0px;
+	  border-left-width:0px;
+	}
+.borderleft
+	{
+	  border:1px solid #000000;
+	  border-top-width:0px;
+	  border-bottom-width:0px;
+	  border-right-width:0px;
+	}
+.fineprint                      /* used for fine print */
+	{
+	  font-size: 10px;
+	}
+.popuphead
+	{ font-size: 16px;
+	  background-color: #FCFCF3; padding:5px; font-weight: bold;
+	  -Moz-Border-Radius: 20px;
+	}
+
+input, select, option, textarea
+	{ 
+	  background-color: #FCFCFF; padding-left:5px; -Moz-Border-Radius: 20px;
+	}
+
+.popup
+	{
+	  font-size: 12px;
+	}
+.editlink                       /* Used for the [edit] tags */
+	{
+	  font-size: 10px;
+	}
+
+.admin                          /* used in admin bars */
+	{ 
+	  font-size: 10px; 
+	  font-weight: bold; 
+	}
+
+.adminform
+	{ 
+	  font-size: 10px; 
+	  font-weight: bold; 
+	}
+.search                          /* used in search text */
+	{ 
+	  font-size: 10px; 
+	  font-weight: boldi; 
+	}
