@@ -1,0 +1,4 @@
+<?php
+$name=_("Jenskin");
+$description=_("A Skin made by Jens. It looks like the config wizard.");
+?>
