@@ -1,3 +1,12 @@
+2004-02-06 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b23
+
+	* Made a Workaround for strange Environments with 
+	  Magic Quotes On and no or ignored .htaccess files.
+
+	* Stripslahes in hidden config fiels.
+
+	* Next try to get my jenskin into cvs.
+
 2004-02-02  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-cvs-b22
 
 	* Updated copyright to 2000-2004.
